<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_image_filter">ImageFilter</string>
    <string name="filter">Filter</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="search_content_label">Enter Search Content</string>
    <string name="search_label">Search</string>
    <string name="advanced_note">Advanced Search Options</string>
    <string name="image_size_label">Image Size</string>
    <string name="image_color_label">Image Color</string>
    <string name="image_type_label">Image Type</string>
    <string name="site_filter_label">Site Filter</string>
    <string name="site_filter_hint">Enter Site URL</string>
    <string name="demo_label">Hello!</string>
    <string name="image_size_prompt">Choose a size</string>
    <string name="image_color_prompt">Choose a color</string>
    <string name="image_type_prompt">Choose a type</string>
    <string name="title_activity_image_display">ImageDisplay</string>

</resources>